// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<input
  className="uk-input "
/>
`;

exports[`Input renders correctly 2`] = `
<input
  className="uk-input uk-search-field"
  type="search"
/>
`;

exports[`Input renders correctly 3`] = `
<input
  className="uk-input  uk-form-danger"
/>
`;

exports[`Input renders correctly 4`] = `
<input
  className="uk-input  uk-form-success"
/>
`;

exports[`Input renders correctly 5`] = `
<input
  className="uk-input  uk-form-blank"
/>
`;

exports[`Input renders correctly 6`] = `
<input
  className="uk-input  uk-form-large"
/>
`;

exports[`Input renders correctly 7`] = `
<input
  className="uk-input  uk-form-small"
/>
`;

exports[`Input renders correctly 8`] = `
<input
  className="uk-input  uk-width-1-1"
/>
`;

exports[`Input renders correctly 9`] = `
<input
  className="uk-input  uk-form-width-large"
/>
`;

exports[`Input renders correctly 10`] = `
<input
  className="uk-input  uk-form-width-medium"
/>
`;

exports[`Input renders correctly 11`] = `
<input
  className="uk-input  uk-form-width-small"
/>
`;

exports[`Input renders correctly 12`] = `
<div
  className="uk-inline"
>
  <span
    className="uk-icon uk-form-icon"
  >
    <svg
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M 2,3 2,17 18,17 18,3 2,3 Z M 17,16 3,16 3,8 17,8 17,16 Z M 17,7 3,7 3,4 17,4 17,7 Z\\"></path><rect width=\\"1\\" height=\\"3\\" x=\\"6\\" y=\\"2\\"></rect><rect width=\\"1\\" height=\\"3\\" x=\\"13\\" y=\\"2\\"></rect>",
        }
      }
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
  <input
    className="uk-input "
  />
</div>
`;

exports[`Input renders correctly 13`] = `
<div
  className="uk-inline"
>
  <span
    className="uk-icon uk-form-icon uk-form-icon-flip"
  >
    <svg
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M 2,3 2,17 18,17 18,3 2,3 Z M 17,16 3,16 3,8 17,8 17,16 Z M 17,7 3,7 3,4 17,4 17,7 Z\\"></path><rect width=\\"1\\" height=\\"3\\" x=\\"6\\" y=\\"2\\"></rect><rect width=\\"1\\" height=\\"3\\" x=\\"13\\" y=\\"2\\"></rect>",
        }
      }
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
  <input
    className="uk-input "
  />
</div>
`;

exports[`Input renders correctly 14`] = `
<div
  className="uk-inline"
>
  <span
    className="uk-icon uk-form-icon uk-form-icon-flip"
  >
    <svg
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path fill=\\"none\\" stroke=\\"#000\\" stroke-width=\\"1.1\\" d=\\"M17.08,11.15 C17.09,11.31 17.1,11.47 17.1,11.64 C17.1,15.53 13.94,18.69 10.05,18.69 C6.16,18.68 3,15.53 3,11.63 C3,7.74 6.16,4.58 10.05,4.58 C10.9,4.58 11.71,4.73 12.46,5\\"></path><polyline fill=\\"none\\" stroke=\\"#000\\" points=\\"9.9 2 12.79 4.89 9.79 7.9\\"></polyline>",
        }
      }
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
  <input
    className="uk-input "
  />
</div>
`;
